--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ja" xmlns:th="http://www.thymeleaf.org">
+<html lang="ja" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新規登録 - RecipeApp</title>
-    <meta name="description" content="RecipeAppの新規ユーザー登録">
+    <title>新規登録 - Recipin'</title>
+    <meta name="description" content="Recipin'の新規ユーザー登録">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,13 +17,14 @@
 
     <!-- Additional styles for register page -->
     <style>
-        /* RecipeAppタイトルの中央揃え - 最優先 */
+        /* Recipin'タイトルの中央揃え - 最優先 */
         .page-register .register-header h1,
         .register-header h1 {
             text-align: center !important;
             margin-bottom: 0.5rem !important;
             padding-left: 0 !important;
             padding-right: 0 !important;
+            font-size: 30px;
         }
 
         .page-register .register-header p,
@@ -168,7 +169,7 @@
 <body class="page-register">
 <div class="form-container">
     <div class="register-header">
-        <h1>RecipeApp</h1>
+        <h1>Recipin'</h1>
         <p>新規登録</p>
     </div>
 
