--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1024,6 +1024,6 @@ if ('IntersectionObserver' in window) {
     });
 }
 </script>
-
+<script src="/assets/js/sidebar-active.js"></script>
 </body>
 </html>
